# python-basics-summary-tool

./: README.md  day1.ipynb  main.py  pyproject.toml  report.json
.github/workflows/: ci.yml
src/python_basics_summary_tool.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_basic.py
